# metamodule-utilities

./: CMakeLists.txt  Makefile  plugin.json
metamodule-plugins/: metamodule-utilities.mmplugin
src/: normal.cpp  plugin.cpp  plugin.hpp
